# EL-SVELTE

./: .env.local  .gitignore  CMakeLists.txt  Hash_table.h  LinkedLists.h  Queue.h  README.md  Rekurencja.h  Stacks.h  hehe.h  main.cpp  package-lock.json  package.json  svelte.config.js  tsconfig.json
Algorithms/: Binary_Search.cpp  Binary_Search_Tree.cpp  Breadth_First_Search.cpp  DP_Factorial.cpp  Depth_First_Search.cpp  Hashing.cpp  Prim_Algorithm.cpp  Quick_Sort.cpp  Randomized.cpp  Recursive.cpp  Searching.cpp  Sorting.cpp  tempCodeRunnerFile.cpp
DataStructures/: Arrays.cpp  Graph.cpp  Singular_Linked_List.cpp  Singular_Linked_Lists.cpp  Tree.cpp
el-svelte/: package-lock.json  package.json
el-svelte/src/backend/: supabase.ts
el-svelte/src/routes/: +layout.svelte  +page.svelte
el-svelte/src/routes/events_page/: +page.svelte
src/: app.css  app.html  app.pcss
src/lib/: EventCard.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/[email]/: +page.svelte
src/routes/calendar/: +page.svelte
src/routes/events/: +page.svelte
src/routes/login/: +page.svelte
src/routes/reset_password/: +page.svelte
